<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="add_contact">Add Contact</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="phone_work">Phone (Work)</string>
    <string name="phone_home">Phone (Home)</string>
    <string name="company">Company</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="select_image">Select image</string>
    <string name="title_activity_create_contact">Create contact</string>
    <string name="action_import_contacts">Import Device\'s Contacts</string>
    <string name="search_hint">Name, phone, email</string>
</resources>
